Change refresh time to 5 minutes to prevent api overloading

--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,7 @@
     <header>
       <img src="assets/bolnify_logo.svg" alt="Bolnify Logo" />
       <p>
-        Send the user a notification if they have sold something via Bol.com LVB
-        stock
+        Bolnify is a Google Chrome extension that sends users a desktop notification as soon as they have sold something through Bol.com LVB
       </p>
     </header>
 
