Update options page

--- a/options.html
+++ b/options.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bolnify - Settings</title>
+  <title>Bolnify - Instellingen</title>
 </head>
 
 <body>
     <header>
-        <img src="assets/bolnify_logo.svg" alt="Bolnify Logo" />
-        <h1>Settings</h1>
+        <img src="assets/images/bolnify_logo.svg" alt="Bolnify Logo" />
+        <h1>Instellingen</h1>
 
     </header>
     <section id="settings">
@@ -63,7 +63,6 @@
             padding: 60px;
             color: #fff;
             text-align: center;
-            background: #0000a4;
         }
         header img{
             width: 50%;
@@ -109,7 +108,7 @@
             width: 25px;
             height: 25px;
             border-radius: 50%; 
-            background-color: #0000a4;
+            background-color: #6C63FF;
             cursor: pointer;
         }
 
@@ -117,12 +116,12 @@
             width: 25px;
             height: 25px;
             border-radius: 50%;
-            background-color: #0000a4;
+            background-color: #6C63FF;
             cursor: pointer;
         }
         input[type="submit"] {
             display: block;
-            background-color: #0000a4;
+            background-color: #6C63FF;
             color: #fff;
             font-size: 12px;
             padding: 12px 20px;
