Change warning message

--- a/popup.html
+++ b/popup.html
@@ -31,8 +31,8 @@
 
       <section id="warning_view">
         <img src="assets/images/warning_image.svg" alt="Bolnify Login">
-        <h1>Niet verbonden</h1>
-        <p>Helaas kan er op dit moment geen<br>verbinding worden gemaakt.<br>Probeer het later nog eens.</p>
+        <h1>Oeps...</h1>
+        <p>Vul de correcte API<br>gegevens in, zodat er<br>verbinding kan worden gemaakt.</p>
       </section>
 
       <section id="connection_form">
