--- a/options.html
+++ b/options.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bolnify - Instellingen</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,10 +17,10 @@
     <section id="settings">
         <form>
             <div id="notifications" class="form_control">
-                <h2>Notification sound</h2>
+                <h2>Notificatie geluid</h2>
 
                 <input class="radio_input" type="radio" name="notification" value="0">
-                <label class="radio">Off</label>
+                <label class="radio">Uit</label>
 
                 <input class="radio_input" type="radio" name="notification" value="1">
                 <label class="radio">Ka-Ching</label>
@@ -30,30 +31,40 @@
             </div>
 
             <div id="notifications_timer" class="form_control">
-                <h2>Notification timer</h2>
-                <p>Set the time for the extension to notify you <br>
-                    If set to 1 it will notify you everytime you have an new open order.</p>
+                <h2>Notificatie interval</h2>
+                <p>Stel in om hoeveel tijd je een notificatie wil ontvangen
                 <input type="range" min="5" max="60" class="slider" id="notification_slider">
                 <div id="slider_output"></div>
 
             </div>
 
             <div class="form_control">
-                <h2>Test Notification</h2>
-                <p>This will send you a test notification to check if you enabled notifications. <br>
-                    If a notification won't pop-up check your PC settings.</p>
-                <input id="notification_buttton" type="submit" value="Send Test Notification">
+                <h2>Test Notificatie</h2>
+                <p>Dit zal een test notificatie sturen om te controleren of je "meldingen" hebt ingeschakeld<br>Als er geen notificatie verschijnt, controleer dan de instellingen van je PC.</p>
+                <input class="default_button" id="notification_buttton" type="submit" value="Stuur Test Notification">
                 
             </div>
-
-            <input id="saveSettings" type="submit" value="Save Settings">
+            <div class="form_control row">
+                <input class="default_button" id="saveSettings" type="submit" value="Opslaan">
+                <input class="button_flat" id="cancelSettings" type="submit" value="Annuleren">
+            </div>
         </form>
     </section>
     <style>
-         * {
+        :root{
+            --primary-color: #6C63FF;
+            --title-color: #000;
+            --title-size: 14px;
+            --paragraph-color: #C2C2C2;
+            --paragraph-size: 12px;
+        }
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+        h2{
+            font-size: var(--paragraph-size);
         }
         header {
             display: flex;
@@ -65,11 +76,12 @@
             text-align: center;
         }
         header img{
-            width: 50%;
+            width: 200px;
         }
         header h1{
-            text-transform: uppercase;
             font-weight: 900;
+            color: var(--title-color);
+            font-size: var(--title-size)
         }
         section#settings{
             display: flex;
@@ -78,13 +90,19 @@
             padding: 30px;     
         }
         section#settings form{
-            width: 100%;
+            width: 50%;
         }
         section#settings .form_control{
             width: 100%;
             margin-bottom: 30px;
             padding-bottom: 30px;
             border-bottom: 1px solid #eee;
+        }
+        section#settings .form_control.row{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            border-bottom: 0;
         }
         section#settings .form_control h2{
             padding-bottom: 10px;
@@ -96,9 +114,9 @@
             -webkit-appearance: none;
             margin: 15px 0;
             width: 100%;
-            height: 15px;
+            height: 10px;
             border-radius: 5px;  
-            background: #d3d3d3;
+            background: #ddd;
             outline: none;
         }
 
@@ -108,7 +126,7 @@
             width: 25px;
             height: 25px;
             border-radius: 50%; 
-            background-color: #6C63FF;
+            background-color: var(--primary-color);
             cursor: pointer;
         }
 
@@ -116,22 +134,41 @@
             width: 25px;
             height: 25px;
             border-radius: 50%;
-            background-color: #6C63FF;
+            background-color: var(--primary-color);
             cursor: pointer;
         }
-        input[type="submit"] {
-            display: block;
-            background-color: #6C63FF;
-            color: #fff;
-            font-size: 12px;
-            padding: 12px 20px;
-            margin: 15px 0;
-            border: none;
-            border-radius: 20px;
+        input[type="submit"]{
+            margin-top: 15px;
+            margin-right: 15px;
+        }
+        input[type="submit"]:hover{
             cursor: pointer;
-      }
-
-
+        }
+        .default_button{
+            min-width: 150px;
+            min-height: 37px;
+            padding: 10px 40px;
+            border: none;
+            color: #fff;
+            font-weight: 700;
+            font-size: 10px;
+            text-transform: uppercase;
+            box-shadow: 0px 4px 10px var(--primary-color);
+            border-radius: 18px;
+            background: var(--primary-color);
+        }
+        .button_flat{
+            min-width: 150px;
+            min-height: 37px;
+            padding: 10px 40px;
+            border: none;
+            color: var(--primary-color);
+            font-weight: 700;
+            font-size: 10px;
+            text-transform: uppercase;
+            border-radius: 18px;
+            background: #fff;
+        }
     </style>
     <script src="js/options.js"></script>
 </body>
