--- a/popup.html
+++ b/popup.html
@@ -99,7 +99,7 @@
         font-weight: 700;
         font-size: 10px;
         text-transform: uppercase;
-        box-shadow: 0px 4px 10px #6C63FF;
+        box-shadow: 0px 4px 10px var(--primary-color);
         border-radius: 18px;
         background: var(--primary-color);
       }
